# clash-config-preprocessor

./: .editorconfig  README.md  main.py  pyproject.toml  requirements.txt  test.py  utils.py  v1.py  v2.py
.github/workflows/: test.yml
clash_config_preprocessor/: cli.py  utils.py  v1.py  v2.py
example/: example.output.v2.yml  example.output.yml  preclash-example.v1.yaml  preclash-example.v2.yaml  preclash-example.yaml  proxies.yml
tests/: test_v2.py
tests/snapshots/: snap_test_v2.py
